Fixed issue with blurred backgrounds of modal dialogs.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
@@ -31,7 +31,7 @@
     transition: filter ease 0.2s;
 }
 
-body.HasOverlay #AppWrapper {
+body.HasOverlay > #AppWrapper {
     filter: blur(5px);
 }
 
